Fix buy buttons hidden on mobile

--- a/demo/app/stylesheets/app.css
+++ b/demo/app/stylesheets/app.css
@@ -88,7 +88,7 @@ hr {
     text-align: center;
   }
   .payment-panel .panel-title {
-    font-size: 16px;
+    font-size: 16px !important;
   }
 }
 /* Zoom: http://stackoverflow.com/a/15757620 */
@@ -148,10 +148,13 @@ td.empty {
   display: table;
   table-layout: fixed;
 }
-.payment-panel .panel-heading .col-xs-6 {
+.payment-panel .panel-heading .row div {
   display: table-cell;
   vertical-align: middle;
   float: none;
+}
+.payment-panel .panel-icons {
+  padding: 0px 5px 0px 0px;
 }
 .payment-panel .panel-title {
   font-size: 18px;
